discussion/kv_engine/155607/155607_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Defrag control sleep

Change-Id: I78336b50a00955f243b264adba9d7cd6a73d964b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-11 12:58:18.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 13:11:42.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36763/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/defragmenter.cc(236): error C2039: "getFragmentationPercD": is not a member of "cb::FragmentationStats" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36763/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31422/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/defragmenter.cc:236:38:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31422/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9793/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include "spdlog/common.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9793/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9793/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10444/ : FAILURE

Compile error at [2021-06-11T13:00:40.637Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/defragmenter.cc:236:38:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10444/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11794/ : FAILURE

Compile error at [2021-06-11T13:07:18.172Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/defragmenter.cc:236:38:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11794/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11368/ : FAILURE

Compile error at [2021-06-11T13:07:06.120Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/defragmenter.cc:236:38:
error: ?const class cb::FragmentationStats? has no member named ?getFragmentationPercD?; did you mean ?getFragmentationPerc??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11368/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11517/ : FAILURE

Compile error at [2021-06-11T13:07:43.812Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/defragmenter.cc:236:38:
error: ?const class cb::FragmentationStats? has no member named ?getFragmentationPercD?; did you mean ?getFragmentationPerc??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11517/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19380/ : FAILURE

Compile error at [2021-06-11T13:09:37.096Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/defragmenter.cc:236:38:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19380/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8387/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/310/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
